--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NewsApp</string>
     <string name="unknown_error">Unknown Error</string>
+    <string name="top">Top</string>
+    <string name="search">Search</string>
 </resources>
