--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="unknown_error">Unknown Error</string>
     <string name="top">Top</string>
     <string name="search">Search</string>
+    <string name="enter_search_keyword_here">Enter search keyword here</string>
 </resources>
