--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="top">Top</string>
     <string name="search">Search</string>
     <string name="enter_search_keyword_here">Enter search keyword here</string>
+    <string name="no_internet">No internet!</string>
 </resources>
